# VixenDigital

./: .gitignore  README.md  db.sqlite3  docker-compose.yaml  example.env  nginx.conf  requirements.txt
backend/app/: pyproject.toml  schema.yml
backend/app/apps/authorization/: admin.py  models.py  serializers.py  service.py  tests.py  urls.py  views.py
backend/app/apps/catalogs/: models.py  repositories.py  serializers.py  urls.py  views.py
backend/app/apps/organizations/: models.py  repositories.py  serializers.py  urls.py  views.py
backend/app/apps/products/: models.py  repositories.py  serializers.py  urls.py  views.py
backend/app/authorization/: models.py  serializers.py  service.py  tests.py  urls.py  views.py
backend/app/catalogs/: models.py  repositories.py  routers.py  serializers.py  service.py  urls.py  views.py
backend/app/catalogs/migrations/: 0003_category_alter_features_category_and_more.py  0004_delete_product.py  0005_organization_category_created_at_category_update_at_and_more.py  0006_alter_category_created_at_alter_category_update_at_and_more.py
backend/app/core/: celery.py  permissions.py  settings.py  urls.py
backend/app/core/backend/: elasticbackend.py  elasticfields.py
backend/app/core/middlewares/: categorymiddleware.py  service.py
backend/app/core/permissions/: permissions.py  service.py
backend/app/extras/: Exceptions.py  slugifer.py
backend/app/products/: models.py  repositories.py  serializers.py  service.py  urls.py  views.py
backend/app/products/migrations/: 0001_initial.py  0002_delete_product.py
catalog/: .env  (+2 more)
(+68 files in other folders)
